--- a/sass/modules/_modules.scss
+++ b/sass/modules/_modules.scss
@@ -225,7 +225,7 @@
 }
 
 .network-map{
-	display:none;
+	//display:none;
 	border-top: 4px solid $grey;
 	&:after{ //FOR TRIANGLE
 		bottom: 100%;
@@ -241,6 +241,27 @@
 		border-top: 20px solid $grey;
 		margin-left: -30px;
 		top: 0px;
+	}
+
+	// Map
+	#map-container {
+	  padding: 6px;
+	  border-width: 1px;
+	  border-style: solid;
+	  border-color: #ccc #ccc #999 #ccc;
+	  -webkit-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
+	  -moz-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
+	  box-shadow: rgba(64, 64, 64, 0.1) 0 2px 5px;
+	  width: 100%;
+	}
+	#map {
+	  width: 100%;
+	  height: 500px;
+	}
+
+	.map-embed{
+		padding: 50px;
+
 	}
 
 
@@ -407,24 +428,6 @@
 	}
 }
 
-// Map
 
-#map-container {
-  padding: 6px;
-  border-width: 1px;
-  border-style: solid;
-  border-color: #ccc #ccc #999 #ccc;
-  -webkit-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
-  -moz-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
-  box-shadow: rgba(64, 64, 64, 0.1) 0 2px 5px;
-  width: 100%;
-}
-#map {
-  width: 100%;
-  height: 400px;
-}
 
-.map-embed{
-	padding: 50px;
 
-}
