--- a/sass/modules/_menus.scss
+++ b/sass/modules/_menus.scss
@@ -248,6 +248,10 @@
 
 .banner-sidebar {
   background-color: #3a3a3a;
+	background-image: url('img/overlay.png');
+	background-repeat: no-repeat;
+	background-position-x: 20px;
+	background-position-y: 30px;
 }
 
 .side-menu {
