--- a/style.css
+++ b/style.css
@@ -4221,9 +4221,13 @@ header {
 /* line 249, sass/modules/_menus.scss */
 .banner-sidebar {
   background-color: #3a3a3a;
+  background-image: url("img/overlay.png");
+  background-repeat: no-repeat;
+  background-position-x: 20px;
+  background-position-y: 30px;
 }
 
-/* line 253, sass/modules/_menus.scss */
+/* line 257, sass/modules/_menus.scss */
 .side-menu {
   position: absolute;
   left: 50px;
@@ -4231,90 +4235,90 @@ header {
   z-index: 100;
   top: 250px;
 }
-/* line 260, sass/modules/_menus.scss */
+/* line 264, sass/modules/_menus.scss */
 .side-menu .list {
   padding: 20px;
   background: #fec935;
 }
-/* line 265, sass/modules/_menus.scss */
+/* line 269, sass/modules/_menus.scss */
 .side-menu .info {
   border-bottom: 2px solid #cfcfcf;
   border-top: 2px solid #cfcfcf;
   padding: 10px;
   text-align: center;
 }
-/* line 270, sass/modules/_menus.scss */
+/* line 274, sass/modules/_menus.scss */
 .side-menu .info a {
   font-family: "Avenir Next Cyr W00 Italic";
   font-size: 10px;
 }
-/* line 278, sass/modules/_menus.scss */
+/* line 282, sass/modules/_menus.scss */
 .side-menu .apply {
   padding: 10px;
   text-align: center;
   background: #616161;
   margin-top: 10px;
 }
-/* line 284, sass/modules/_menus.scss */
+/* line 288, sass/modules/_menus.scss */
 .side-menu .apply a {
   text-transform: uppercase;
   color: #fec935;
 }
-/* line 289, sass/modules/_menus.scss */
+/* line 293, sass/modules/_menus.scss */
 .side-menu .apply:hover {
   background: #fec935;
 }
-/* line 292, sass/modules/_menus.scss */
+/* line 296, sass/modules/_menus.scss */
 .side-menu .apply:hover a {
   color: #616161;
 }
-/* line 298, sass/modules/_menus.scss */
+/* line 302, sass/modules/_menus.scss */
 .side-menu a {
   color: #616161;
   font-family: "Avenir Next Cyr W00 Bold";
   font-size: 15px;
   line-height: 30px;
 }
-/* line 306, sass/modules/_menus.scss */
+/* line 310, sass/modules/_menus.scss */
 .side-menu .scrolled-item a {
   border-bottom: 3px solid #616161;
 }
 
-/* line 312, sass/modules/_menus.scss */
+/* line 316, sass/modules/_menus.scss */
 .utilities-nav {
   background: #eeeeee;
   float: left;
   width: 100%;
 }
-/* line 317, sass/modules/_menus.scss */
+/* line 321, sass/modules/_menus.scss */
 .utilities-nav a {
   color: #8f8f8f;
   text-transform: uppercase;
   font-size: 10px;
   font-family: "Avenir Next Cyr W00 Regular";
 }
-/* line 324, sass/modules/_menus.scss */
+/* line 328, sass/modules/_menus.scss */
 .utilities-nav ul {
   float: right;
   margin: 0 30px;
 }
-/* line 328, sass/modules/_menus.scss */
+/* line 332, sass/modules/_menus.scss */
 .utilities-nav ul li {
   float: left;
   position: relative;
   padding: 0 10px;
 }
-/* line 333, sass/modules/_menus.scss */
+/* line 337, sass/modules/_menus.scss */
 .utilities-nav ul li.current-menu-item a {
   color: black;
 }
 
-/* line 340, sass/modules/_menus.scss */
+/* line 344, sass/modules/_menus.scss */
 .utilities-nav li:hover, .banner-navigation li:hover {
   opacity: 0.7;
 }
 
-/* line 344, sass/modules/_menus.scss */
+/* line 348, sass/modules/_menus.scss */
 .utilities-nav a:hover {
   color: black;
   opacity: 1;
