--- a/sass/modules/_menus.scss
+++ b/sass/modules/_menus.scss
@@ -250,7 +250,7 @@
   background-color: #3a3a3a;
 	background-image: url('img/overlay.png');
 	background-repeat: no-repeat;
-	background-position-x: 20px;
+	background-position-x: 100%;
 	background-position-y: 30px;
 }
 
