--- a/style.css
+++ b/style.css
@@ -4014,7 +4014,7 @@ section {
 
 /* line 806, sass/layout/_main.scss */
 .wp-video {
-  margin-top: -375px;
+  margin-top: -55%;
 }
 
 /* line 1, sass/layout/_header.scss */
