--- a/sass/base/_index.scss
+++ b/sass/base/_index.scss
@@ -7,6 +7,10 @@
 // It doesn’t include any class or ID selectors. It is defining the default
 // styling for how that element should look in all occurrences on the page.
 
+/* COMPASS IMPORTS
+================================================= */
+@import "compass/css3";
+
 // ==========================================================================
 // $Normalize Reset
 // ==========================================================================
