--- a/sass/utilities/_config.scss
+++ b/sass/utilities/_config.scss
@@ -40,6 +40,22 @@ $red-primary                  : #bc4851;
 $red-secondary                : #ed555d;
 $red-tertiary                 : #f37f66;
 
+.yellow-primary               { color: #fec935;}
+.yellow-secondary             { color: #ef9f25;}
+.yellow-tertiary              { color: #efe431;}
+.purple-primary               { color: #97729e;}
+.purple-secondary             { color: #4f539e;}
+.purple-tertiary              { color: #712880;}
+.blue-primary                 { color: #2791bd;}
+.blue-secondary               { color: #0ebde8;}
+.blue-tertiary                { color: #66b5c8;}
+.green-primary                { color: #4fd1a1;}
+.green-secondary              { color: #1f5c45;}
+.green-tertiary               { color: #b8d242;}
+.red-primary                  { color: #bc4851;}
+.red-secondary                { color: #ed555d;}
+.red-tertiary                 { color: #f37f66;}
+
 
 // Main color palette
 $color-primary                : $hopbush;
