--- a/sass/modules/_modules.scss
+++ b/sass/modules/_modules.scss
@@ -54,6 +54,12 @@
 		text-align: right;
 		text-transform: uppercase;
 		img{position: relative; vertical-align: top; top: -3px;}
+		a{
+			color: $yellow-primary;
+			&:hover{
+				@include opacity(0.7);
+			}
+		}
 	}
 }
 
@@ -63,6 +69,7 @@
 	width: 100%;
 	border-top: 4px solid $grey;
 	margin-bottom: 0px;
+	border-bottom: 4px solid $grey;
 
 	fieldset {
 	  border: none;
@@ -95,6 +102,7 @@
 	.topic-list{
 		padding: 20px 20px 30px 20px;
 		border-right: 4px solid $grey;
+		
 
 		span.filter-by{
 			font-size: em(11);
@@ -127,6 +135,7 @@
 		-webkit-column-count: 4; /* Chrome, Safari, Opera */
 	    -moz-column-count: 4; /* Firefox */
 	    column-count: 4;
+	    
 
 	  
 
@@ -153,7 +162,7 @@
 		line-height: 1.4;
 		cursor: pointer;
 		display: block;
-	 	width: 180px;
+	 	width: 300px;
 		left: 6px;
 	    top: -3px;
 	    position: relative;
@@ -229,7 +238,7 @@
 }
 
 .network-map{
-	display:none;
+	display: none;
 	border-top: 4px solid $grey;
 	&:after{ //FOR TRIANGLE
 		bottom: 100%;
@@ -285,8 +294,7 @@
   right: 0;
   text-align: center;
   opacity: 0;
-  pointer-events: none;
-  
+  pointer-events: none; 
   -webkit-transition: 150ms;
   -moz-transition: 150ms;
   transition: 150ms;
@@ -294,6 +302,7 @@
 
 .network-grid
 {
+	min-height: 200px;
 	.mix{
 		width: 25%;
 		float: left;
@@ -387,6 +396,7 @@
 	 	 	display: block;
 	 		font-size: em(12);
 	 		line-height: 1.5;
+	 		text-transform: uppercase;
  		}
  	}
  	&:hover .hover-info{
@@ -445,14 +455,54 @@
 	padding: 50px 0 100px 0;
 	z-index: 20;
 	top: 200px;
+	.profile-content{
+			transition: opacity .25s ease-in-out;
+   -moz-transition: opacity .25s ease-in-out;
+   -webkit-transition: opacity .25s ease-in-out;	
+	}
+
+
+	.profile-info{
+		padding-left: 20px;
+	}
 
 	h3{
 		text-transform: uppercase;
 		font-family: $font-family--bold;
 		font-size: em(24);
-		line-height: em(28);
+		line-height: 1.0em;
 		color: $yellow-primary;
+		margin-bottom: 0px;
+		padding-bottom: 0px;
 	}
+	span.green-primary{
+		font-weight: bold;
+		display: inline;
+	}
+
+
+	span.title{
+ 		display: block;
+	 	font-family:$font-family--italic;
+	 	font-size: em(15);
+	 	line-height: 1.5;
+	 }
+
+	span.location{
+ 	 	display: block;
+ 		font-size: em(12);
+ 		line-height: 1.5;
+ 		text-transform: uppercase;
+ 		margin-bottom: 20px;
+ 	}
+
+ 	.footer-social{
+ 		height: 50px;
+ 	}
+
+
+
+
 	.close-profile a{
 		font-size: 30px;
 		font-family: $font-family--heavy;
