--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -104,6 +104,7 @@ $color_vars: $yellow-primary, $yellow-secondary, $yellow-tertiary, $purple-prima
       a {
         color: white;
       }
+
     }
 
     .cta-text {
@@ -129,6 +130,10 @@ $color_vars: $yellow-primary, $yellow-secondary, $yellow-tertiary, $purple-prima
       position: relative;
       z-index: 10;
 
+      h2 a {
+        color: white;
+      }
+
 
 
       // CTA
@@ -150,6 +155,33 @@ $color_vars: $yellow-primary, $yellow-secondary, $yellow-tertiary, $purple-prima
 
         &:hover {
           opacity: 0.7;
+        }
+      }
+    }
+
+    .quote{
+
+      .cta-text{ 
+ 
+        a{
+          color: white;
+          .right{
+            border-color: white;
+           }
+           .right::after {
+              border-top: 0.1em solid white;
+              border-right: 0.1em solid white;
+            }
+        
+          &:hover{@include opacity(0.7)}
+
+           
+        }
+      }
+      .cta-small {
+ 
+        .cta-text {
+          display: block;
         }
       }
     }
@@ -629,13 +661,31 @@ section {
   margin-bottom: 15px;
 }
 
-.single-post main, .blog main {
+.single-post main, .blog main, .page-template-global-network main, main {
   border-top: 5px solid $yellow-primary;
 }
 
 .page-template-product main, .page-template-panel main {
   border-top: 5px solid $blue-primary;
 }
+
+.parent-page-online-learning main{
+  border-top: 5px solid $blue-primary;
+}
+
+.parent-page-residential-experiences main{
+  border-top: 5px solid $green-primary;
+}
+
+.parent-page-research-ideas main{
+  border-top: 5px solid $red-primary;
+}
+
+
+
+
+
+
 
 .blog-sidebar {
   padding: 50px 30px;
