--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -856,3 +856,11 @@ section {
 .wp-video {
   margin-top: -40%;
 }
+
+.text-holder{
+  background-color: #dcdcdc;
+  padding: 60px;
+  p{
+    color: #9e9e9e;
+  }
+}
