--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -860,6 +860,10 @@ section {
 .text-holder{
   background-color: #dcdcdc;
   padding: 60px;
+  h3{
+    text-transform: uppercase;
+    color: #393939;
+  }
   p{
     color: #9e9e9e;
   }
