--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -861,10 +861,26 @@ section {
   background-color: #dcdcdc;
   padding: 60px;
   h3{
-    text-transform: uppercase;
+   
     color: #393939;
   }
   p{
     color: #9e9e9e;
   }
+}
+
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px; height: 0; overflow: hidden;
+}
+ 
+.video-container iframe,
+.video-container object,
+.video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
