--- a/sass/modules/_modules.scss
+++ b/sass/modules/_modules.scss
@@ -456,9 +456,9 @@
 	z-index: 20;
 	top: 200px;
 	.profile-content{
-			transition: opacity .25s ease-in-out;
-   -moz-transition: opacity .25s ease-in-out;
-   -webkit-transition: opacity .25s ease-in-out;	
+		transition: opacity .25s ease-in-out;
+  		 -moz-transition: opacity .25s ease-in-out;
+   		-webkit-transition: opacity .25s ease-in-out;	
 	}
 
 
@@ -522,6 +522,18 @@
 	}
 }
 
+.close-filter a{
+	font-size: 20px;
+	font-family: $font-family--heavy;
+	position: absolute;
+	top: 10px;
+	right: 2%;
+	color: $grey;
+	&:hover{
+		@include opacity(0.7);
+	}	
+
+}
 
 
 
