--- a/style.css
+++ b/style.css
@@ -4507,12 +4507,31 @@ section {
 }
 /* line 863, sass/layout/_main.scss */
 .text-holder h3 {
-  text-transform: uppercase;
   color: #393939;
 }
 /* line 867, sass/layout/_main.scss */
 .text-holder p {
   color: #9e9e9e;
+}
+
+/* line 872, sass/layout/_main.scss */
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
+}
+
+/* line 880, sass/layout/_main.scss */
+.video-container iframe,
+.video-container object,
+.video-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 /* line 1, sass/layout/_header.scss */
@@ -5619,6 +5638,21 @@ header {
   padding: 100px 0px 500px 0px;
   margin: 0 auto;
   text-align: center;
+}
+
+/* line 525, sass/modules/_modules.scss */
+.close-filter a {
+  font-size: 20px;
+  font-family: "Avenir Next Cyr W00 Heavy";
+  position: absolute;
+  top: 10px;
+  right: 2%;
+  color: #616161;
+}
+/* line 532, sass/modules/_modules.scss */
+.close-filter a:hover {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
+  opacity: 0.7;
 }
 
 /* line 1, sass/modules/_input.scss */
