homepage network feed and url filters

--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -439,6 +439,7 @@ $color_vars: $yellow-primary, $yellow-secondary, $yellow-tertiary, $purple-prima
 .information-network {
   border-left: 10px solid white;
   float: left;
+   width: 100%;
 }
 
 .information-bar {
