--- a/style.css
+++ b/style.css
@@ -4053,9 +4053,10 @@ main {
 .information-network {
   border-left: 10px solid white;
   float: left;
+  width: 100%;
 }
 
-/* line 444, sass/layout/_main.scss */
+/* line 445, sass/layout/_main.scss */
 .information-bar {
   height: 52px;
   background-color: #fec935;
@@ -4066,17 +4067,17 @@ main {
   width: 100%;
 }
 
-/* line 454, sass/layout/_main.scss */
+/* line 455, sass/layout/_main.scss */
 .person {
   width: 25%;
   float: left;
 }
-/* line 458, sass/layout/_main.scss */
+/* line 459, sass/layout/_main.scss */
 .person img {
   float: left;
 }
 
-/* line 465, sass/layout/_main.scss */
+/* line 466, sass/layout/_main.scss */
 section {
   float: left;
   position: relative;
@@ -4084,81 +4085,81 @@ section {
   margin-bottom: 10px;
 }
 
-/* line 472, sass/layout/_main.scss */
+/* line 473, sass/layout/_main.scss */
 .intro-text, .callout-text, .listing-text, .body-text-area, .icons-text, .buttons-text, .form-text {
   padding: 50px;
   float: left;
 }
 
-/* line 477, sass/layout/_main.scss */
+/* line 478, sass/layout/_main.scss */
 .email-signup-text {
   padding: 50px;
 }
 
-/* line 481, sass/layout/_main.scss */
+/* line 482, sass/layout/_main.scss */
 .schedule-text {
   float: left;
   padding: 50px;
 }
 
-/* line 486, sass/layout/_main.scss */
+/* line 487, sass/layout/_main.scss */
 .quote-text {
   padding: 50px;
   text-align: center;
 }
 
-/* line 491, sass/layout/_main.scss */
+/* line 492, sass/layout/_main.scss */
 .image {
   height: 400px;
 }
 
-/* line 495, sass/layout/_main.scss */
+/* line 496, sass/layout/_main.scss */
 .image-with-text {
   height: 600px;
 }
 
-/* line 500, sass/layout/_main.scss */
+/* line 501, sass/layout/_main.scss */
 .icon-box {
   width: 33.3%;
   float: left;
   padding: 20px 120px 20px 0;
 }
-/* line 505, sass/layout/_main.scss */
+/* line 506, sass/layout/_main.scss */
 .icon-box h5 {
   font-family: "Avenir Next Cyr W00 Bold";
 }
 
-/* line 510, sass/layout/_main.scss */
+/* line 511, sass/layout/_main.scss */
 .schedule-box {
   width: 50%;
   float: left;
   padding: 20px 120px 20px 0;
 }
-/* line 515, sass/layout/_main.scss */
+/* line 516, sass/layout/_main.scss */
 .schedule-box .strong {
   font-family: "Avenir Next Cyr W00 Bold";
 }
-/* line 518, sass/layout/_main.scss */
+/* line 519, sass/layout/_main.scss */
 .schedule-box .blue {
   color: #0ebde8;
 }
 
-/* line 523, sass/layout/_main.scss */
+/* line 524, sass/layout/_main.scss */
 .buttons h3, .form h3 {
   margin-bottom: 0;
 }
 
-/* line 527, sass/layout/_main.scss */
+/* line 528, sass/layout/_main.scss */
 .buttons p, .form p {
   margin-bottom: 15px;
 }
 
-/* line 531, sass/layout/_main.scss */
+/* line 532, sass/layout/_main.scss */
 .regular-font {
   font-family: "Avenir Next Cyr W00 Regular";
 }
 
-/* line 535, sass/layout/_main.scss */
+/* line 536, sass/layout/_main.scss */
 .buttons-cta {
   display: inline;
   padding: 25px 35px 25px 25px;
@@ -4168,7 +4169,7 @@ section {
   position: relative;
   float: left;
 }
-/* line 544, sass/layout/_main.scss */
+/* line 545, sass/layout/_main.scss */
 .buttons-cta .right {
   display: inline-block;
   width: 1.5em;
@@ -4179,7 +4180,7 @@ section {
   border: 0.1em solid #2791bd;
   line-height: 1.1em;
 }
-/* line 555, sass/layout/_main.scss */
+/* line 556, sass/layout/_main.scss */
 .buttons-cta .right:after {
   content: '';
   display: inline-block;
@@ -4193,24 +4194,24 @@ section {
   border-top: 0.1em solid #2791bd;
   border-right: 0.1em solid #2791bd;
 }
-/* line 569, sass/layout/_main.scss */
+/* line 570, sass/layout/_main.scss */
 .buttons-cta:hover {
   background: white;
   color: #2791bd;
   border: 3px solid #2791bd;
   padding: 22px 32px 22px 22px;
 }
-/* line 575, sass/layout/_main.scss */
+/* line 576, sass/layout/_main.scss */
 .buttons-cta:hover .right {
   border: 0.1em solid #2791bd;
 }
-/* line 578, sass/layout/_main.scss */
+/* line 579, sass/layout/_main.scss */
 .buttons-cta:hover .right::after {
   border-top: 0.1em solid #2791bd;
   border-right: 0.1em solid #2791bd;
 }
 
-/* line 587, sass/layout/_main.scss */
+/* line 588, sass/layout/_main.scss */
 .submit-buttons {
   display: inline;
   padding: 10px 20px 10px 10px;
@@ -4221,7 +4222,7 @@ section {
   float: left;
   margin-top: 30px;
 }
-/* line 597, sass/layout/_main.scss */
+/* line 598, sass/layout/_main.scss */
 .submit-buttons .right {
   display: inline-block;
   width: 1.5em;
@@ -4231,7 +4232,7 @@ section {
   text-align: center;
   line-height: 1.1em;
 }
-/* line 607, sass/layout/_main.scss */
+/* line 608, sass/layout/_main.scss */
 .submit-buttons .right:after {
   content: '';
   display: inline-block;
@@ -4244,44 +4245,44 @@ section {
   transform: rotate(45deg);
 }
 
-/* line 621, sass/layout/_main.scss */
+/* line 622, sass/layout/_main.scss */
 .content-half {
   padding-right: 20px;
   margin-top: 20px;
 }
-/* line 625, sass/layout/_main.scss */
+/* line 626, sass/layout/_main.scss */
 .content-half h5 {
   font-family: "Avenir Next Cyr W00 Bold";
   margin-bottom: 0;
 }
 
-/* line 631, sass/layout/_main.scss */
+/* line 632, sass/layout/_main.scss */
 .content-text {
   padding: 50px;
   float: left;
 }
-/* line 635, sass/layout/_main.scss */
+/* line 636, sass/layout/_main.scss */
 .content-text p {
   color: black;
 }
-/* line 639, sass/layout/_main.scss */
+/* line 640, sass/layout/_main.scss */
 .content-text h4 {
   font-family: "Avenir Next Cyr W00 Bold";
 }
 
-/* line 645, sass/layout/_main.scss */
+/* line 646, sass/layout/_main.scss */
 .side-text p {
   margin-bottom: 3px;
   font-size: 10px;
   color: #494949;
 }
 
-/* line 652, sass/layout/_main.scss */
+/* line 653, sass/layout/_main.scss */
 #content {
   float: left;
 }
 
-/* line 657, sass/layout/_main.scss */
+/* line 658, sass/layout/_main.scss */
 .thumbnail {
   float: left;
   width: 100%;
@@ -4289,32 +4290,32 @@ section {
   margin-bottom: 15px;
 }
 
-/* line 664, sass/layout/_main.scss */
+/* line 665, sass/layout/_main.scss */
 .single-post main, .blog main, .page-template-global-network main, main {
   border-top: 5px solid #fec935;
 }
 
-/* line 668, sass/layout/_main.scss */
+/* line 669, sass/layout/_main.scss */
 .page-template-product main, .page-template-panel main {
   border-top: 5px solid #2791bd;
 }
 
-/* line 672, sass/layout/_main.scss */
+/* line 673, sass/layout/_main.scss */
 .parent-page-online-learning main {
   border-top: 5px solid #2791bd;
 }
 
-/* line 676, sass/layout/_main.scss */
+/* line 677, sass/layout/_main.scss */
 .parent-page-residential-experiences main {
   border-top: 5px solid #4fd1a1;
 }
 
-/* line 680, sass/layout/_main.scss */
+/* line 681, sass/layout/_main.scss */
 .parent-page-research-ideas main {
   border-top: 5px solid #bc4851;
 }
 
-/* line 690, sass/layout/_main.scss */
+/* line 691, sass/layout/_main.scss */
 .blog-sidebar {
   padding: 50px 30px;
   background-color: #3a3a3a;
@@ -4323,14 +4324,14 @@ section {
   width: 100%;
 }
 
-/* line 698, sass/layout/_main.scss */
+/* line 699, sass/layout/_main.scss */
 .blog-content {
   float: left;
   padding: 50px;
   width: 100%;
 }
 
-/* line 704, sass/layout/_main.scss */
+/* line 705, sass/layout/_main.scss */
 .blog-sidebar-title {
   text-transform: uppercase;
   font-family: "Avenir Next Cyr W00 Heavy";
@@ -4343,99 +4344,99 @@ section {
   cursor: pointer;
   float: left;
 }
-/* line 716, sass/layout/_main.scss */
+/* line 717, sass/layout/_main.scss */
 .blog-sidebar-title i {
   float: right;
 }
 
-/* line 721, sass/layout/_main.scss */
+/* line 722, sass/layout/_main.scss */
 .blog-sidebar-title-text {
   float: left;
 }
 
-/* line 725, sass/layout/_main.scss */
+/* line 726, sass/layout/_main.scss */
 .blog-categories {
   display: none;
 }
-/* line 728, sass/layout/_main.scss */
+/* line 729, sass/layout/_main.scss */
 .blog-categories ul {
   margin-bottom: 40px;
   float: left;
   width: 100%;
 }
-/* line 733, sass/layout/_main.scss */
+/* line 734, sass/layout/_main.scss */
 .blog-categories ul li {
   padding: 5px;
   float: left;
   width: 100%;
 }
-/* line 738, sass/layout/_main.scss */
+/* line 739, sass/layout/_main.scss */
 .blog-categories ul li a {
   color: #fec935;
   font-size: 15px;
   padding: 5px;
 }
-/* line 744, sass/layout/_main.scss */
+/* line 745, sass/layout/_main.scss */
 .blog-categories ul li.active a {
   background: #fec935;
   color: #3a3a3a;
 }
-/* line 751, sass/layout/_main.scss */
+/* line 752, sass/layout/_main.scss */
 .blog-categories ul li:hover a {
   background: #fec935;
   color: #3a3a3a;
 }
 
-/* line 760, sass/layout/_main.scss */
+/* line 761, sass/layout/_main.scss */
 .blog-post {
   border-top: 5px solid #fec935;
   padding-top: 20px;
   padding-bottom: 20px;
 }
-/* line 765, sass/layout/_main.scss */
+/* line 766, sass/layout/_main.scss */
 .blog-post h2 {
   margin-bottom: 15px;
 }
-/* line 768, sass/layout/_main.scss */
+/* line 769, sass/layout/_main.scss */
 .blog-post h2 a {
   color: #3a3a3a;
 }
-/* line 773, sass/layout/_main.scss */
+/* line 774, sass/layout/_main.scss */
 .blog-post h5 {
   font-family: "Avenir Next Cyr W00 Heavy";
 }
-/* line 776, sass/layout/_main.scss */
+/* line 777, sass/layout/_main.scss */
 .blog-post h5 a {
   color: #3a3a3a;
 }
-/* line 781, sass/layout/_main.scss */
+/* line 782, sass/layout/_main.scss */
 .blog-post h6 {
   color: #3a3a3a;
 }
 
-/* line 786, sass/layout/_main.scss */
+/* line 787, sass/layout/_main.scss */
 .blog-post-small {
   padding-right: 20px;
 }
 
-/* line 790, sass/layout/_main.scss */
+/* line 791, sass/layout/_main.scss */
 .blog-post-categories {
   margin-bottom: 10px;
   color: #fec935;
   font-family: "Avenir Next Cyr W00 Bold";
 }
 
-/* line 796, sass/layout/_main.scss */
+/* line 797, sass/layout/_main.scss */
 .active-category {
   display: block;
 }
 
-/* line 800, sass/layout/_main.scss */
+/* line 801, sass/layout/_main.scss */
 .active-sidebar-title {
   border-bottom: 3px solid #fec935;
 }
 
-/* line 804, sass/layout/_main.scss */
+/* line 805, sass/layout/_main.scss */
 .moretag {
   color: #fec935;
   text-transform: uppercase;
@@ -4443,78 +4444,78 @@ section {
   font-family: "Avenir Next Cyr W00 Bold";
 }
 
-/* line 811, sass/layout/_main.scss */
+/* line 812, sass/layout/_main.scss */
 .social-icons {
   color: #a9a9a9;
 }
-/* line 814, sass/layout/_main.scss */
+/* line 815, sass/layout/_main.scss */
 .social-icons i {
   font-size: 25px;
   margin-right: 20px;
 }
 
-/* line 820, sass/layout/_main.scss */
+/* line 821, sass/layout/_main.scss */
 .news {
   margin-bottom: 0px;
 }
 
-/* line 824, sass/layout/_main.scss */
+/* line 825, sass/layout/_main.scss */
 .image-holder {
   height: 100%;
   display: table !important;
 }
 
-/* line 829, sass/layout/_main.scss */
+/* line 830, sass/layout/_main.scss */
 .image-text {
   padding: 100px 50px;
   display: table-cell;
   vertical-align: middle;
   height: 100%;
 }
-/* line 835, sass/layout/_main.scss */
+/* line 836, sass/layout/_main.scss */
 .image-text h4 {
   color: white;
   margin-bottom: 10px;
   font-family: "Avenir Next Cyr W00 Bold";
 }
 
-/* line 842, sass/layout/_main.scss */
+/* line 843, sass/layout/_main.scss */
 .media {
   height: 400px;
 }
 
-/* line 846, sass/layout/_main.scss */
+/* line 847, sass/layout/_main.scss */
 .mejs-container {
   width: 100% !important;
 }
 
-/* line 850, sass/layout/_main.scss */
+/* line 851, sass/layout/_main.scss */
 .video-holder {
   overflow: hidden;
   height: 400px;
   position: relative;
 }
 
-/* line 856, sass/layout/_main.scss */
+/* line 857, sass/layout/_main.scss */
 .wp-video {
   margin-top: -40%;
 }
 
-/* line 860, sass/layout/_main.scss */
+/* line 861, sass/layout/_main.scss */
 .text-holder {
   background-color: #dcdcdc;
   padding: 60px;
 }
-/* line 863, sass/layout/_main.scss */
+/* line 864, sass/layout/_main.scss */
 .text-holder h3 {
   color: #393939;
 }
-/* line 867, sass/layout/_main.scss */
+/* line 868, sass/layout/_main.scss */
 .text-holder p {
   color: #9e9e9e;
 }
 
-/* line 872, sass/layout/_main.scss */
+/* line 873, sass/layout/_main.scss */
 .video-container {
   position: relative;
   padding-bottom: 56.25%;
@@ -4523,7 +4524,7 @@ section {
   overflow: hidden;
 }
 
-/* line 880, sass/layout/_main.scss */
+/* line 881, sass/layout/_main.scss */
 .video-container iframe,
 .video-container object,
 .video-container embed {
@@ -5474,6 +5475,7 @@ header {
   -webkit-filter: grayscale(100%);
   filter: gray;
   filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0'/></filter></svg>#grayscale");
+  float: left;
 }
 /* line 351, sass/modules/_modules.scss */
 .network-grid-item img {
@@ -5653,6 +5655,11 @@ header {
 .close-filter a:hover {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
   opacity: 0.7;
+}
+
+/* line 538, sass/modules/_modules.scss */
+a.no-opacity:hover {
+  opacity: 1;
 }
 
 /* line 1, sass/modules/_input.scss */
