global email ajax

--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -94,6 +94,13 @@ $color_vars: $yellow-primary, $yellow-secondary, $yellow-tertiary, $purple-prima
       color: white;
     }
 
+    .email-response{
+      opacity: 0;
+      transition: opacity .25s ease-in-out;
+       -moz-transition: opacity .25s ease-in-out;
+       -webkit-transition: opacity .25s ease-in-out; 
+    }
+
     // Callout
 
     .callout {
