--- a/sass/modules/_menus.scss
+++ b/sass/modules/_menus.scss
@@ -323,7 +323,10 @@
 		text-transform: uppercase;
 		font-size: 10px;
 		font-family: $font-family--regular;
+
+ 
 	}
+
 
 	ul {
 		float: right;
@@ -341,7 +344,7 @@
 	}
 }
 
-.utilities-nav li:hover, .banner-navigation li:hover {
+.banner-navigation li:hover {
 	opacity: 0.7;
 }
 
