--- a/sass/utilities/_helpers.scss
+++ b/sass/utilities/_helpers.scss
@@ -57,6 +57,10 @@
   visibility: hidden;
 }
 
+.hidden{  display: none !important;
+  visibility: hidden;
+}
+
 // Hide only visually, but have it available for screenreaders: h5bp.com/v
 
 %visuallyhidden {
