--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -681,7 +681,7 @@ section {
   border-top: 5px solid $blue-primary;
 }
 
-.parent-page-residential-experiences main{
+.parent-page-residential main{
   border-top: 5px solid $green-primary;
 }
 
