--- a/style.css
+++ b/style.css
@@ -4417,7 +4417,7 @@ section {
 }
 
 /* line 684, sass/layout/_main.scss */
-.parent-page-residential-experiences main {
+.parent-page-residential main {
   border-top: 5px solid #4fd1a1;
 }
 
