--- a/style.css
+++ b/style.css
@@ -4945,6 +4945,11 @@ section {
   color: #9e9e9e;
 }
 
+/* line 901, sass/layout/_main.scss */
+.footer-attribution a {
+  color: #a2a2a2;
+}
+
 /* line 1, sass/layout/_header.scss */
 header {
   padding: 10px 30px;
