--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -707,7 +707,7 @@ section {
 }
 
 .parent-page-research-ideas main{
-  border-top: 5px solid $red-primary;
+  border-top: 5px solid $purple-tertiary;
 }
 
 
