--- a/sass/modules/_menus.scss
+++ b/sass/modules/_menus.scss
@@ -182,7 +182,7 @@
 
 		&:nth-child(1) {
 			&:hover, &.current-menu-item {
-				border-bottom: 3px solid $red-primary;
+				border-bottom: 3px solid $purple-tertiary;
 			}
 		}
 		&:nth-child(2) {
