current active menu

--- a/sass/modules/_menus.scss
+++ b/sass/modules/_menus.scss
@@ -334,7 +334,7 @@
 			position: relative;
 			padding: 0 10px;
 
-			&.current-menu-item a {
+			&.current_page_parent a {
 				color: black;
 			}
 		}
